# truckio

examples/switch/: Cargo.toml
examples/switch/.cargo/: config.toml
examples/switch/src/: main.rs
truckio-comms/: Cargo.toml  build.rs
truckio-comms/protos/: command.proto  radio_packet.proto
truckio-comms/src/: dummy_radio.rs  lib.rs  lib_test.rs  lora_trait.rs  lora_wrapper.rs  protos.rs
