[package]
name = "truckio-comms"
version = "0.1.0"
edition = "2024"

[dependencies]
chacha20poly1305 = { version = "0.10.1", features = ["heapless"] }
defmt = "0.3.10"
embedded-hal-async = "1.0.0"
lora-phy = "3.0.1"
micropb = { version = "0.1.0", features = ["container-heapless"] }
microbloom = { git = "https://github.com/chudsaviet/microbloom.git", rev = "38fa1bdeef2ccdffaab1547f0abb3a744b8c0458" }
frand = { version = "0.10.1", default-features = false }
embassy-time = "0.4.0"
embassy-futures = "0.1.1"

[build-dependencies]
glob = "0.3.2"
micropb-gen = "0.1.0"
