[package]
edition = "2024"
name = "switch"
version = "0.1.0"

[dependencies]

# Change stm32c031c6 to your chip name, if necessary.
embassy-stm32 = { version = "0.2.0", features = [
    "defmt",
    "time-driver-any",
    "stm32c031c6",
    "memory-x",
    "unstable-pac",
    "exti",
] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }

truckio-comms = { path = "../../truckio-comms" }
lora-phy = "3.0.1"

[profile.release]
opt-level = "s"
lto = true
debug = 2

[profile.dev]
opt-level = "s"
lto = true
